5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1649_2445.log
== SUBMITION (2019-04-05 23:03:24) 
-- CODE:
temperatura = input("digite a temperatura em C ou F")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(fahrenheit)
if(temperatura == "F")
	celcius = 5/9 * (valor_temperatura - 32) 
	print(celcius)
-- EXECUTION TIME:
0.143716
-- ERROR:
  File "/home/codebench/codes/1649/2445/main.py", line 7
    if(temperatura == "F")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:03:25) 
-- CODE:
temperatura = input("digite a temperatura em C ou F")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(fahrenheit)
if(temperatura == "F")
	celcius = 5/9 * (valor_temperatura - 32) 
	print(celcius)
-- ERROR:
File "XXXX", line 7
    if(temperatura == "F")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:03:35) 
-- CODE:
temperatura = input("digite a temperatura em C ou F")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(fahrenheit)
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(celcius)
-- OUTPUT:
544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:03:47) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(fahrenheit)
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(celcius)
-- OUTPUT:
544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:04:13) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(fahrenheit)
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(celcius)
-- OUTPUT:
544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:04:23) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(fahrenheit)
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(celcius)
-- OUTPUT:
544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:05:12) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.120582
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
544.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:05:23) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
temperatura = temperatura.upper()
valor_temperatura = float(input("digite o valor da temperatura: "))
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- OUTPUT:
544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:06:15) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.130572
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
544.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:06:44) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura - 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- OUTPUT:
544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:07:34) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:07:42) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.152628
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:03:15) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.149232
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:03:38) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.134686
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:03:40) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.120931
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:03:44) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.141156
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:05:05) 
-- CODE:
temperatura = input("digite a temperatura em C ou F: ")
valor_temperatura = float(input("digite o valor da temperatura: "))
temperatura = temperatura.upper()
if(temperatura == "C") :
	fahrenheit =(9 * valor_temperatura + 160) / 5
	print(round(fahrenheit,2))
if(temperatura == "F") :
	celcius = 5/9 * (valor_temperatura - 32) 
	print(round(celcius,2))
-- EXECUTION TIME:
0.170379
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
